[gd_scene load_steps=2 format=3 uid="uid://galaxy_map_scene"]

[ext_resource type="Script" path="res://scenes/galaxy_map/galaxy_map.gd" id="1"]

[node name="GalaxyMap" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.05, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="SectorLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "Sector: (0, 0, 0) | Stars: 0"

[node name="InstructionsLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Click: Select | Enter/Right-click: Enter system | Scroll: Zoom | Middle-drag: Pan | Shift+Arrows: Sectors | ESC: Back"
horizontal_alignment = 1

[node name="StarInfoPanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 250.0

[node name="InfoLabel" type="RichTextLabel" parent="UI/StarInfoPanel"]
custom_minimum_size = Vector2(280, 200)
layout_mode = 2
bbcode_enabled = true
text = "Select a star to view info"
